--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+* {
+  margin: 0;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
+  background: linear-gradient(119.77deg, #EA0022 1.67%, #754DE8 116.47%);
   -moz-osx-font-smoothing: grayscale;
+  /* width: fit-content; */
+  /* height: fit-content; */
+  /* display: column; */
+  
 }
 
 code {
