--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -69,7 +69,7 @@
 .re {
     width: 12rem;
     height: 12rem;
-    margin-left: 70px;
+    margin-left: 22rem;
     margin-top: 9rem;
     border-radius: 90%;
     background-color: white;
@@ -79,7 +79,7 @@
 .re1 {
     width: 10rem;
     height: 10rem;
-    margin-left: 10rem;
+    margin-left: 32rem;
     margin-top: 25rem;
     border-radius: 90%;
     background-color: white;
@@ -89,8 +89,8 @@
 .re2 {
     width: 7rem;
     height: 7rem;
-    margin-left: 18rem;
-    margin-top: 27rem;
+    margin-left: 40rem;
+    margin-top: 40rem;
     border-radius: 90%;
     background-color: white;
     position: absolute;
@@ -99,7 +99,7 @@
 .re3 {
     width: 7rem;
     height: 7rem;
-    margin-left: 4rem;
+    margin-left: 10rem;
     margin-top: 50rem;
     border-radius: 90%;
     background-color: white;
@@ -170,6 +170,91 @@
         width: 100%;
         height: 100%;
     }
+    .re {
+    width: 12rem;
+    height: 12rem;
+    margin-left: 1rem;
+    margin-bottom: 50rem;
+    border-radius: 90%;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re1 {
+    width: 10rem;
+    height: 10rem;
+    margin-left: -15rem;
+    margin-top: 10rem;
+    border-radius: 90%;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re2 {
+    width: 7rem;
+    height: 7rem;
+    margin-left: 20rem;
+    margin-top: 40rem;
+    border-radius: 90%;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re3 {
+    width: 7rem;
+    height: 7rem;
+    margin-left: 10rem;
+    margin-top: 5rem;
+    display: none;
+    border-radius: 90%;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re4 {
+    width: 12rem;
+    height: 12rem;
+    margin-left: 1rem;
+    margin-top: 10rem;
+    border-radius: 90%;
+    display: none;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re5 {
+    width: 10rem;
+    height: 10rem;
+    margin-left: 20rem;
+    margin-top: 10rem;
+    border-radius: 90%;
+    display: none;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re6 {
+    width: 7rem;
+    height: 7rem;
+    margin-left: 1rem;
+    display: none;
+    margin-top: 10rem;
+    border-radius: 90%;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
+.re7 {
+    width: 7rem;
+    height: 7rem;
+    margin-left: 1rem;
+    margin-top: 5rem;
+    display: none;
+    border-radius: 90%;
+    background-color: white;
+    position: absolute;
+    opacity: 0.2;
+}
 }
 
 @media only screen and (max-width : 770px)  {
@@ -204,6 +289,9 @@
 }
 
 @media only screen and (max-width : 700px)  {
+    .body {
+        height: 100vh;
+    }
     .body__text1 {
         font-size: 14px;
         width: 15rem;
@@ -222,12 +310,38 @@
         width: 25rem;
         font-size: 15px;
     }
+    .hide {
+        /* display: none; */
+    }
+    .header__list {
+        margin-right: 5rem;
+    }
 
 }
 
 @media only screen and (max-width : 630px)  {
-    .body__1 {
-        margin-left: 200px;
+    .body__header {
+        font-size: 1rem;
+    }
+    .body__text1 {
+        font-size: 10px;
+        width: 12rem;
+    }
+    .body__text2 {
+        font-size: 10px;
+        width: 12rem;
+    }
+    .body__div1 {
+        margin-left: 5rem;
+        width: 20rem;
+        font-size: 12px;
+        padding: 1rem 1rem;
+    }
+    .body__div {
+        padding: 1rem 1rem;
+        margin-left: 5rem;
+        width: 20rem;
+        font-size: 12px;
     }
 
 }
