--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     padding: 18px 20px;
     background-color: white;
+    /* width: 100%; */
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
